fixed op button too close

--- a/hw1/calculator.css
+++ b/hw1/calculator.css
@@ -1,5 +1,5 @@
 #calculator {
-    width: 280px;
+    width: 270px;
     display: block;
     text-decoration: none;
     text-align: center;
@@ -15,11 +15,12 @@ div {
 .display {
     height: 50px;
     margin:auto;
+    border-radius: 5px;
     background-color:white;
     margin-bottom: 5px;
     margin-top: 5px;
     text-align: right;
-    border-width: 6px;
+    border-width: 4px;
     font-size: 40px;
     font-family:sans-serif;   
     border-style: solid;
@@ -39,7 +40,9 @@ button:hover {
 }
 
 #zero {
-    width: 120px;
+    margin-left: 5px;
+    float: left;
+    width: 122px;
     background-color: lightblue;
 }
 
